# autoimpl

./: README.md
autoimpl/: Cargo.toml
autoimpl-derive/: Cargo.toml
autoimpl-derive/src/: lib.rs
autoimpl/src/: lib.rs
